Correct contrast check

--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ section {
   font-weight: bold;
   font-size: 48px;
   line-height: 52px;
-  color: #36b37e;
+  color: #16463a;
 }
 
 #firstp {
@@ -249,7 +249,7 @@ h3 {
   font-weight: 500;
   font-size: 17px;
   line-height: 24px;
-  color: white;
+  color: #000;
   transition: all 0.5s;
 }
 
